--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <li class="nav_item"><a href="#testimonials">Testimonials</a></li>
                 <li class="nav_item"><a href="#pricing">Pricing Plans</a></li>
                 <li class="nav_item"><a href="#discount">Contact</a></li>
-                <li> <a class="login" href="dashboards/login form/loginen.html">Log in</a></li>
+                <li> <a class="login" href="dashboards/login form/docloginen.html">Log in</a></li>
             </div>
         </div>
     </header>
