--- a/indexar.html
+++ b/indexar.html
@@ -32,7 +32,7 @@
                     <li class="nav_item"><a href="#pricing">خطط الأسعار</a></li>
                     <li class="nav_item"><a href="#discount">اتصل بنا</a></li>
                 </ul>
-                <a class="login" href="dashboards/login form/loginar.html">تسجيل الدخول</a>
+                <a class="login" href="dashboards/login form/docloginar.html">تسجيل الدخول</a>
                 <div class="language">
                     <a href="index.html">en</a>
                     <a href="indexfr.html">fr</a>
@@ -47,7 +47,7 @@
                     <li class="nav_item"><a href="#testimonials">الشهادات</a></li>
                     <li class="nav_item"><a href="#pricing">خطط الأسعار</a></li>
                     <li class="nav_item"><a href="#discount">اتصل بنا</a></li>
-                    <li> <a class="login" href="dashboards/login form/loginar.html">تسجيل الدخول</a></li>
+                    <li> <a class="login" href="dashboards/login form/docloginar.html">تسجيل الدخول</a></li>
                 </div>
         </div>
     </header>
