--- a/indexfr.html
+++ b/indexfr.html
@@ -34,7 +34,7 @@
                     <li class="nav_item"><a href="#pricing">Tarification</a></li>
                     <li class="nav_item"><a href="#discount">Contact</a></li>
                 </ul>
-                <a class="login" href="dashboards/login form/loginfr.html">Connecter</a>
+                <a class="login" href="dashboards/login form/docloginfr.html">Connecter</a>
                 <div class="language">
                     <a href="index.html">en</a>
                     <a href="indexar.html">ع</a>
@@ -49,7 +49,7 @@
                     <li class="nav_item"><a href="#testimonials">Témoignages</a></li>
                     <li class="nav_item"><a href="#pricing">Tarification</a></li>
                     <li class="nav_item"><a href="#discount">Contact</a></li>
-                    <li> <a class="login" href="dashboards/login form/loginfr.html">Se connecter</a></li>
+                    <li> <a class="login" href="dashboards/login form/docloginfr.html">Se connecter</a></li>
                 </div>
         </div>
     </header>
