--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li class="nav_item"><a href="#pricing">Pricing Plans</a></li>
                 <li class="nav_item"><a href="#discount">Contact</a></li>
             </ul>
-            <a class="login" href="dashboards/login form/loginen.html">Log in</a>
+            <a class="login" href="dashboards/login form/docloginen.html">Log in</a>
             <div class="language">
                 <a href="indexfr.html">fr</a>
                 <a href="indexar.html">ع</a>
