--- a/dashboards/Doctor Arabic/meals-reports.html
+++ b/dashboards/Doctor Arabic/meals-reports.html
@@ -46,20 +46,9 @@
                         <div class="image-container">
                             <img src="../assets/img/logo/SVG/slimArtboard 6.svg" alt="Slim Together">
                         </div>
-
-
-
-
-
-
-
-
                     </ol>
-
                 </div>
-
             </div>
-
             <div class="navbar_right">
                 <div class="notifications">
                     <div class="icon_wrap"><i class="fas fa-bell"></i></div>
@@ -156,8 +145,8 @@
 
                 </div>
                 <div class="language">
-                    <a href="../login form/loginen.html">EN</a>
-                    <a href="../login form/loginfr.html">FR</a>
+                    <a href="../Doctor/meals-reports.html">EN</a>
+                    <a href="../Doctor French/meals-reports.html">FR</a>
                 </div>
 
             </div>
@@ -229,7 +218,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="chat-doctor.html" target="_blank">
+                                            <a href="chat-doctor.html">
                                                 <i class="fas fa-comments"></i>
                                                 <span>الرسائل</span>
                                                 <small class="unread-msg">23</small>
@@ -248,7 +237,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="../login form/loginar.html">
+                                            <a href="../login form/docloginar.html">
                                                 <i class="fas fa-sign-out-alt"></i>
                                                 <span>تسجيل الخروج</span>
                                             </a>
