--- a/dashboards/Doctor Arabic/patient-profile.html
+++ b/dashboards/Doctor Arabic/patient-profile.html
@@ -161,8 +161,8 @@
 
                 </div>
                 <div class="language">
-                    <a href="../login form/loginen.html">EN</a>
-                    <a href="../login form/loginfr.html">FR</a>
+                    <a href="../Doctor/patient-profile.html">EN</a>
+                    <a href="../Doctor French/patient-profile.html">FR</a>
                 </div>
 
             </div>
@@ -235,7 +235,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="chat-doctor.html" target="_blank">
+                                            <a href="chat-doctor.html">
                                                 <i class="fas fa-comments"></i>
                                                 <span>الرسائل</span>
                                                 <small class="unread-msg">23</small>
@@ -254,7 +254,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="../login form/loginar.html">
+                                            <a href="../login form/docloginar.html">
                                                 <i class="fas fa-sign-out-alt"></i>
                                                 <span>تسجيل الخروج</span>
                                             </a>
