--- a/dashboards/Doctor French/doctor-profile-settings.html
+++ b/dashboards/Doctor French/doctor-profile-settings.html
@@ -152,8 +152,8 @@
 
                 </div>
                 <div class="language">
-                    <a href="../login form/loginar.html">EN</a>
-                    <a href="../login form/loginar.html">ع</a>
+                    <a href="../Doctor/doctor-profile-settings.html">EN</a>
+                    <a href="../Doctor Arabic/doctor-profile-settings.html">ع</a>
                 </div>
 
             </div>
@@ -177,7 +177,7 @@
                                         <img src="../assets/img/doctors/doctor-thumb-02.jpg" alt="User Image">
                                     </a>
                                     <div class="profile-det-info">
-                                        <h3>Dr. Chorfi Khawla</h3>
+                                        <h3>Dr. Chorfi Khaoula</h3>
 
                                         <div class="patient-details">
                                             <h5 class="mb-0">diététicienne enregistrée</h5>
@@ -225,7 +225,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="chat-doctor.html" target="_blank">
+                                            <a href="chat-doctor.html">
                                                 <i class="fas fa-comments"></i>
                                                 <span>Message</span>
                                                 <small class="unread-msg">23</small>
@@ -244,7 +244,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="../login form/loginfr.html">
+                                            <a href="../login form/docloginfr.html">
                                                 <i class="fas fa-sign-out-alt"></i>
                                                 <span>Déconnexion</span>
                                             </a>
