--- a/dashboards/Doctor/doctor-profile-settings.html
+++ b/dashboards/Doctor/doctor-profile-settings.html
@@ -152,8 +152,8 @@
 
                 </div>
                 <div class="language">
-                    <a href="../login form/loginfr.html">fr</a>
-                    <a href="../login form/loginar.html">ع</a>
+                    <a href="../Doctor French/doctor-profile-settings.html">fr</a>
+                    <a href="../Doctor Arabic/doctor-profile-settings.html">ع</a>
 
                 </div>
 
@@ -178,7 +178,7 @@
                                         <img src="../assets/img/doctors/doctor-thumb-02.jpg" alt="User Image">
                                     </a>
                                     <div class="profile-det-info">
-                                        <h3>Dr.________</h3>
+                                        <h3>Dr. Chorfi Khaoula</h3>
 
                                         <div class="patient-details">
                                             <h5 class="mb-0">registered dietitian</h5>
@@ -227,7 +227,7 @@
                                         </li>
 
                                         <li>
-                                            <a href="chat-doctor.html" target="_blank">
+                                            <a href="chat-doctor.html">
                                                 <i class="fas fa-comments"></i>
                                                 <span>Message</span>
                                                 <small class="unread-msg">23</small>
@@ -246,7 +246,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="../login form/loginen.html">
+                                            <a href="../login form/docloginen.html">
                                                 <i class="fas fa-sign-out-alt"></i>
                                                 <span>Logout</span>
                                             </a>
