--- a/dashboards/Patient Arabic/change-password.html
+++ b/dashboards/Patient Arabic/change-password.html
@@ -289,7 +289,7 @@
                                         </li>
 
                                         <li>
-                                            <a href="chat.html" target="_blank">
+                                            <a href="chat.html">
                                                 <i class="fas fa-comments"></i>
                                                 <span>رسائل</span>
                                                 <small class="unread-msg">23</small>
@@ -308,7 +308,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="../login form/loginen.html">
+                                            <a href="../login form/docloginar.html">
                                                 <i class="fas fa-sign-out-alt"></i>
                                                 <span>تسجيل الخروج</span>
                                             </a>
