--- a/dashboards/Patient Arabic/chat.html
+++ b/dashboards/Patient Arabic/chat.html
@@ -74,7 +74,7 @@
                                             </div>
                                             <div class="media-body">
                                                 <div>
-                                                    <div class="user-name">Dr...</div>
+                                                    <div class="user-name">Dr. Chorfi Khaoula</div>
                                                     <div class="user-last-chat">hello
                                                     </div>
                                                 </div>
