--- a/dashboards/Patient Arabic/profile-settings.html
+++ b/dashboards/Patient Arabic/profile-settings.html
@@ -51,24 +51,12 @@
                         <div class="image-container">
                             <img src="../assets/img/logo/SVG/slimArtboard 6.svg" alt="Slim Together">
                         </div>
-
-
-
-
-
-
-
-
                     </ol>
-
                 </div>
-
             </div>
-
             <div class="navbar_right">
                 <div class="notifications">
                     <div class="icon_wrap"><i class="fas fa-bell"></i></div>
-
                     <div class="notification_dd">
                         <ul class="notification_ul">
                             <li class="success">
@@ -211,7 +199,7 @@
                                         </li>
 
                                         <li>
-                                            <a href="chat.html" target="_blank">
+                                            <a href="chat.html">
                                                 <i class="fas fa-comments"></i>
                                                 <span>رسائل</span>
                                                 <small class="unread-msg">23</small>
@@ -230,7 +218,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="../login form/loginen.html">
+                                            <a href="../login form/docloginar.html">
                                                 <i class="fas fa-sign-out-alt"></i>
                                                 <span>تسجيل الخروج</span>
                                             </a>
