--- a/dashboards/Patient French/booking.html
+++ b/dashboards/Patient French/booking.html
@@ -172,7 +172,7 @@
                                         <li>
                                             <a href="add-meals-report.html">
                                                 <i class="fas fa-file"></i>
-                                                <span>Envoyer des habitudes quotidiennes</span>
+                                                <span>Envoyer des habitudes</span>
                                             </a>
                                         </li>
                                         <li class="active">
@@ -188,7 +188,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="chat.html" target="_blank">
+                                            <a href="chat.html">
                                                 <i class="fas fa-comments"></i>
                                                 <span>Message</span>
                                                 <small class="unread-msg">23</small>
@@ -207,7 +207,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="../login form/loginen.html">
+                                            <a href="../login form/docloginfr.html">
                                                 <i class="fas fa-sign-out-alt"></i>
                                                 <span>Déconnexion</span>
                                             </a>
@@ -226,7 +226,7 @@
                                         <img src="../assets/img/doctors/doctor-thumb-02.jpg" alt="Image utilisateur">
                                     </a>
                                     <div class="booking-info">
-                                        <h4><a href="doctor-profile.html">Dr.________</a></h4>
+                                        <h4><a href="doctor-profile.html">Dr. Chorfi Khaoula</a></h4>
                                         <div class="rating">
                                             <i class="fas fa-star filled"></i>
                                             <i class="fas fa-star filled"></i>
