--- a/dashboards/Patient French/patient-dashboard.html
+++ b/dashboards/Patient French/patient-dashboard.html
@@ -45,20 +45,9 @@
                         <div class="image-container">
                             <img src="../assets/img/logo/SVG/slimArtboard 6.svg" alt="Slim Together">
                         </div>
-
-
-
-
-
-
-
-
                     </ol>
-
                 </div>
-
             </div>
-
             <div class="navbar_right">
                 <div class="notifications">
                     <div class="icon_wrap"><i class="fas fa-bell"></i></div>
@@ -189,7 +178,7 @@
                                         <li>
                                             <a href="add-meals-report.html">
                                                 <i class="fas fa-file"></i>
-                                                <span>Envoyer des habitudes quotidiennes</span>
+                                                <span>Envoyer des habitudes</span>
                                             </a>
                                         </li>
                                         <li>
@@ -205,7 +194,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="chat.html" target="_blank">
+                                            <a href="chat.html">
                                                 <i class="fas fa-comments"></i>
                                                 <span>Message</span>
                                                 <small class="unread-msg">23</small>
@@ -224,7 +213,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="../login form/loginen.html">
+                                            <a href="../login form/docloginfr.html">
                                                 <i class="fas fa-sign-out-alt"></i>
                                                 <span>Déconnexion</span>
                                             </a>
