--- a/dashboards/Patient French/profile-settings.html
+++ b/dashboards/Patient French/profile-settings.html
@@ -190,7 +190,7 @@
                                         <li>
                                             <a href="add-meals-report.html">
                                                 <i class="fas fa-file"></i>
-                                                <span>Envoyer des habitudes quotidiennes</span>
+                                                <span>Envoyer des habitudes</span>
                                             </a>
                                         </li>
                                         <li>
@@ -206,7 +206,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="chat.html" target="_blank">
+                                            <a href="chat.html">
                                                 <i class="fas fa-comments"></i>
                                                 <span>Message</span>
                                                 <small class="unread-msg">23</small>
@@ -225,7 +225,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="../login form/loginen.html">
+                                            <a href="../login form/docloginfr.html">
                                                 <i class="fas fa-sign-out-alt"></i>
                                                 <span>Déconnexion</span>
                                             </a>
