--- a/dashboards/login form/docloginar.html
+++ b/dashboards/login form/docloginar.html
@@ -53,14 +53,14 @@
         <div class="overlay-container">
             <div class="overlay">
                 <div class="overlay-panel overlay-left">
-                    <h1>مرحبًا، طبيب!</h1>
+                    <h1 style="direction: rtl;">مرحبًا، طبيب!</h1>
                     <p>الرجاء تسجيل الدخول باستخدام معلوماتك الشخصية</p>
                     <button class="ghost" id="signIn">أنا مريض</button>
                 </div>
                 <div class="overlay-panel overlay-right">
-                    <h1>مرحبًا!</h1>
+                    <h1 style="direction: rtl;">مرحبًا!</h1>
                     <p>الرجاء تسجيل الدخول باستخدام معلوماتك الشخصية وابدأ رحلتك الصحية معنا</p>
-                    <button class="ghost" id="signUp">أنا الطبيب!!</button>
+                    <button class="ghost" id="signUp">أنا الطبيب</button>
                 </div>
             </div>
         </div>
