--- a/indexar.html
+++ b/indexar.html
@@ -75,10 +75,9 @@
                         <h2>Chorfi Khaoula</h2>
                         <div class="image"><img src="imgs/avatar-04.png" alt=""></div>
                         <div>
-                            <p>Article evident arrived express highest men did boy. Mistress sensible entirely am so. Quick can manor smart money hopes worth too. Comfort produce husband boy her had hearing. Law others theirs passed but wishes. You day real
-                                less till dear read. Considered use dispatched melancholy sympathize discretion led. Oh feel if up to till like.. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel molestias placeat reprehenderit nostrum doloribus
-                                illo aperiam, distinctio odio officia voluptatem dignissimos at expedita, perferendis rem. Ut illum autem praesentium sapiente? Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur dolorum quaerat debitis. Nisi
-                                perferendis omnis iste ullam, asperiores repudiandae accusamus libero perspiciatis quae culpa velit ad laboriosam cum id optio.</p>
+                            <p>Pharmacist specialized in Hydrology and Bromatology (study of water and food). Certified specialist in therapeutic nutrition from CFNA (Center for Applied Nutritherapy and Phytotherapy Training). Certified Trainer in Therapeutic
+                                Nutrition by the International Labor Organization I.L.O</p>
+                            <p>This platform specializes in the field of obesity and overweight. We don't focus on implementing diets, but on changing dietary and daily habits, such as sleep, exercise, and screen exposure (TV, smartphone).</p>
                         </div>
                     </div>
 
