--- a/dashboards/Doctor Arabic/add-patient.html
+++ b/dashboards/Doctor Arabic/add-patient.html
@@ -50,20 +50,9 @@
                         <div class="image-container">
                             <img src="../assets/img/logo/SVG/slimArtboard 6.svg" alt="Slim Together">
                         </div>
-
-
-
-
-
-
-
-
                     </ol>
-
                 </div>
-
             </div>
-
             <div class="navbar_right">
                 <div class="notifications">
                     <div class="icon_wrap"><i class="fas fa-bell"></i></div>
@@ -157,13 +146,11 @@
                             </li>
                         </ul>
                     </div>
-
                 </div>
                 <div class="language">
-                    <a href="../login form/loginen.html">EN</a>
-                    <a href="../login form/loginfr.html">FR</a>
+                    <a href="../Doctor/add-patient.html">EN</a>
+                    <a href="../Doctor French/add-patient.html">FR</a>
                 </div>
-
             </div>
         </div>
 
@@ -234,7 +221,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="chat-doctor.html" target="_blank">
+                                            <a href="chat-doctor.html">
                                                 <i class="fas fa-comments"></i>
                                                 <span>الرسائل</span>
                                                 <small class="unread-msg">23</small>
@@ -253,7 +240,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="../login form/loginar.html">
+                                            <a href="../login form/docloginar.html">
                                                 <i class="fas fa-sign-out-alt"></i>
                                                 <span>تسجيل الخروج</span>
                                             </a>
@@ -325,6 +312,12 @@
                                                 <input type="text" class="form-control">
                                             </div>
                                         </div>
+                                        <div class="col-12 col-md-6">
+                                            <div class="form-group">
+                                                <label>كلمة المرور</label>
+                                                <input type="password" class="form-control">
+                                            </div>
+                                        </div>
                                         <div class="col-12">
                                             <div class="form-group">
                                                 <label>العنوان</label>
@@ -353,6 +346,13 @@
                                         </div>
                                         <div class="col-12 ">
                                             <h1 class="prof_stt_title">القياسات</h1>
+                                        </div>
+                                        <div class="col-12 ">
+                                            <div class="form-group">
+                                                <div class="illustrative-pic">
+                                                    <img src="../assets/img/waistHip.avif" alt="waist and hip measurments illustration">
+                                                </div>
+                                            </div>
                                         </div>
                                         <div class="col-12 col-md-6">
                                             <div class="form-group">
@@ -472,22 +472,13 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-12 col-md-6">
+                                        <div class="col-12">
                                             <div id="hello2Input" class="hidden">
                                                 <label for="hello2">عدد الأطفال</label>
                                                 <input type="number" id="hello2" name="hello2" class="form-control">
                                             </div>
                                         </div>
-                                        <div class="col-12 col-md-6 ">
-                                            <div id="conditionalInput" class="hidden">
-                                                <label for="hello">هل تستخدم أي وسائل منع الحمل؟</label>
-                                                <select class="form-control select">
-                                                    <option>حبوب منع الحمل</option>
-                                                    <option>الباتش المانع</option>
-                                                    <option>المطاطية</option>
-                                                </select>
-                                            </div>
-                                        </div>
+                                       
                                         <div class="col-12 ">
                                             <div class="form-group">
                                                 <label>اختر خطة</label>
