--- a/dashboards/Doctor Arabic/doctor-profile-settings.html
+++ b/dashboards/Doctor Arabic/doctor-profile-settings.html
@@ -152,8 +152,8 @@
 
                 </div>
                 <div class="language">
-                    <a href="../login form/loginen.html">EN</a>
-                    <a href="../login form/loginfr.html">FR</a>
+                    <a href="../Doctor/doctor-profile-settings.html">EN</a>
+                    <a href="../Doctor French/doctor-profile-settings.html">FR</a>
                 </div>
 
             </div>
@@ -225,7 +225,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="chat-doctor.html" target="_blank">
+                                            <a href="chat-doctor.html">
                                                 <i class="fas fa-comments"></i>
                                                 <span>الرسائل</span>
                                                 <small class="unread-msg">23</small>
@@ -244,7 +244,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="../login form/loginar.html">
+                                            <a href="../login form/docloginar.html">
                                                 <i class="fas fa-sign-out-alt"></i>
                                                 <span>تسجيل الخروج</span>
                                             </a>
