--- a/dashboards/Doctor Arabic/schedule-timings.html
+++ b/dashboards/Doctor Arabic/schedule-timings.html
@@ -52,20 +52,9 @@
                         <div class="image-container">
                             <img src="../assets/img/logo/SVG/slimArtboard 6.svg" alt="Slim Together">
                         </div>
-
-
-
-
-
-
-
-
                     </ol>
-
                 </div>
-
             </div>
-
             <div class="navbar_right">
                 <div class="notifications">
                     <div class="icon_wrap"><i class="fas fa-bell"></i></div>
@@ -162,8 +151,8 @@
 
                 </div>
                 <div class="language">
-                    <a href="../login form/loginen.html">EN</a>
-                    <a href="../login form/loginfr.html">FR</a>
+                    <a href="../Doctor/schedule-timings.html">EN</a>
+                    <a href="../Doctor French/schedule-timings.html">FR</a>
                 </div>
 
             </div>
@@ -235,7 +224,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="chat-doctor.html" target="_blank">
+                                            <a href="chat-doctor.html">
                                                 <i class="fas fa-comments"></i>
                                                 <span>الرسائل</span>
                                                 <small class="unread-msg">23</small>
@@ -254,7 +243,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="../login form/loginar.html">
+                                            <a href="../login form/docloginar.html">
                                                 <i class="fas fa-sign-out-alt"></i>
                                                 <span>تسجيل الخروج</span>
                                             </a>
