--- a/dashboards/Doctor French/add-patient.html
+++ b/dashboards/Doctor French/add-patient.html
@@ -50,20 +50,9 @@
                         <div class="image-container">
                             <img src="../assets/img/logo/SVG/slimArtboard 6.svg" alt="Slim Together">
                         </div>
-
-
-
-
-
-
-
-
                     </ol>
-
                 </div>
-
             </div>
-
             <div class="navbar_right">
                 <div class="notifications">
                     <div class="icon_wrap"><i class="fas fa-bell"></i></div>
@@ -157,13 +146,11 @@
                             </li>
                         </ul>
                     </div>
-
                 </div>
                 <div class="language">
-                    <a href="../login form/loginar.html">EN</a>
-                    <a href="../login form/loginar.html">ع</a>
+                    <a href="../Doctor/add-patient.html">EN</a>
+                    <a href="../Doctor French/add-patient.html">ع</a>
                 </div>
-
             </div>
         </div>
 
@@ -186,7 +173,7 @@
                                         <img src="../assets/img/doctors/doctor-thumb-02.jpg" alt="User Image">
                                     </a>
                                     <div class="profile-det-info">
-                                        <h3>Dr. Chorfi Khawla</h3>
+                                        <h3>Dr. Chorfi Khaoula</h3>
 
                                         <div class="patient-details">
                                             <h5 class="mb-0">diététicienne enregistrée</h5>
@@ -235,7 +222,7 @@
                                         </li>
 
                                         <li>
-                                            <a href="chat-doctor.html" target="_blank">
+                                            <a href="chat-doctor.html">
                                                 <i class="fas fa-comments"></i>
                                                 <span>Message</span>
                                                 <small class="unread-msg">23</small>
@@ -254,7 +241,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="../login form/loginfr.html">
+                                            <a href="../login form/docloginfr.html">
                                                 <i class="fas fa-sign-out-alt"></i>
                                                 <span>Déconnexion</span>
                                             </a>
@@ -328,6 +315,12 @@
                                                 <input type="text" class="form-control">
                                             </div>
                                         </div>
+                                        <div class="col-12 col-md-6">
+                                            <div class="form-group">
+                                                <label>mot de passe</label>
+                                                <input type="password" class="form-control">
+                                            </div>
+                                        </div>
                                         <div class="col-12">
                                             <div class="form-group">
                                                 <label>Adresse</label>
@@ -357,6 +350,13 @@
 
                                         <div class="col-12 ">
                                             <h1 class="prof_stt_title">Mesures </h1>
+                                        </div>
+                                        <div class="col-12 ">
+                                            <div class="form-group">
+                                                <div class="illustrative-pic">
+                                                    <img src="../assets/img/waistHip.avif" alt="waist and hip measurments illustration">
+                                                </div>
+                                            </div>
                                         </div>
 
                                         <div class="col-12 col-md-6">
@@ -495,16 +495,7 @@
                                             </div>
                                         </div>
 
-                                        <div class="col-12 col-md-6 ">
-                                            <div id="conditionalInput" class="hidden">
-                                                <label for="hello">Utilisez-vous des méthodes de contraception ?</label>
-                                                <select class="form-control select">
-                                                    <option>Pilules contraceptives</option>
-                                                    <option>Patch contraceptif</option>
-                                                    <option>Préservatif</option>
-                                                </select>
-                                            </div>
-                                        </div>
+                                        
 
                                         <div class="col-12 ">
                                             <div class="form-group">
