--- a/dashboards/Doctor French/doctor-dashboard.html
+++ b/dashboards/Doctor French/doctor-dashboard.html
@@ -46,20 +46,9 @@
                         <div class="image-container">
                             <img src="../assets/img/logo/SVG/slimArtboard 6.svg" alt="Slim Together">
                         </div>
-
-
-
-
-
-
-
-
                     </ol>
-
                 </div>
-
             </div>
-
             <div class="navbar_right">
                 <div class="notifications">
                     <div class="icon_wrap"><i class="fas fa-bell"></i></div>
@@ -156,8 +145,8 @@
 
                 </div>
                 <div class="language">
-                    <a href="../login form/loginar.html">EN</a>
-                    <a href="../login form/loginar.html">ع</a>
+                    <a href="../Doctor/doctor-dashboard.html">EN</a>
+                    <a href="../Doctor Arabic/doctor-dashboard.html">ع</a>
                 </div>
 
             </div>
@@ -181,7 +170,7 @@
                                         <img src="../assets/img/doctors/doctor-thumb-02.jpg" alt="User Image">
                                     </a>
                                     <div class="profile-det-info">
-                                        <h3>Dr. Chorfi Khawla</h3>
+                                        <h3>Dr. Chorfi Khaoula</h3>
 
                                         <div class="patient-details">
                                             <h5 class="mb-0">registered dietitian</h5>
@@ -231,7 +220,7 @@
                                         </li>
 
                                         <li>
-                                            <a href="chat-doctor.html" target="_blank">
+                                            <a href="chat-doctor.html">
                                                 <i class="fas fa-comments"></i>
                                                 <span>Message</span>
                                                 <small class="unread-msg">23</small>
@@ -251,7 +240,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="../login form/loginen.html">
+                                            <a href="../login form/docloginfr.html">
                                                 <i class="fas fa-sign-out-alt"></i>
                                                 <span>Déconnexion</span>
                                             </a>
@@ -337,6 +326,10 @@
                                         <li class="nav-item">
                                             <a class="nav-link" href="#today-appointments" data-toggle="tab">Aujourd'hui</a>
                                         </li>
+                                        <div class="search-bar">
+                                            <input type="text" class="search-input" placeholder="Search...">
+                                            <button class="search-button">Rechercher</button>
+                                        </div>
                                     </ul>
 
                                     <!-- /Appointment Tab -->
