--- a/dashboards/Doctor French/my-patients.html
+++ b/dashboards/Doctor French/my-patients.html
@@ -46,20 +46,9 @@
                         <div class="image-container">
                             <img src="../assets/img/logo/SVG/slimArtboard 6.svg" alt="Slim Together">
                         </div>
-
-
-
-
-
-
-
-
                     </ol>
-
                 </div>
-
             </div>
-
             <div class="navbar_right">
                 <div class="notifications">
                     <div class="icon_wrap"><i class="fas fa-bell"></i></div>
@@ -156,8 +145,8 @@
 
                 </div>
                 <div class="language">
-                    <a href="../login form/loginar.html">EN</a>
-                    <a href="../login form/loginar.html">ع</a>
+                    <a href="../Doctor/my-patients.html">EN</a>
+                    <a href="../Doctor Arabic/my-patients.html">ع</a>
                 </div>
 
             </div>
@@ -301,7 +290,7 @@
                                         <img src="../assets/img/doctors/doctor-thumb-02.jpg" alt="User Image">
                                     </a>
                                     <div class="profile-det-info">
-                                        <h3>Dr. Chorfi Khawla</h3>
+                                        <h3>Dr. Chorfi Khaoula</h3>
 
                                         <div class="patient-details">
                                             <h5 class="mb-0">diététicienne enregistrée</h5>
@@ -349,7 +338,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="chat-doctor.html" target="_blank">
+                                            <a href="chat-doctor.html">
                                                 <i class="fas fa-comments"></i>
                                                 <span>Messages</span>
                                                 <small class="unread-msg">23</small>
@@ -368,7 +357,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="../login form/loginfr.html">
+                                            <a href="../login form/docloginfr.html">
                                                 <i class="fas fa-sign-out-alt"></i>
                                                 <span>Déconnexion</span>
                                             </a>
