--- a/dashboards/Doctor French/patient-profile.html
+++ b/dashboards/Doctor French/patient-profile.html
@@ -51,20 +51,9 @@
                         <div class="image-container">
                             <img src="../assets/img/logo/SVG/slimArtboard 6.svg" alt="Slim Together">
                         </div>
-
-
-
-
-
-
-
-
                     </ol>
-
                 </div>
-
             </div>
-
             <div class="navbar_right">
                 <div class="notifications">
                     <div class="icon_wrap"><i class="fas fa-bell"></i></div>
@@ -161,8 +150,8 @@
 
                 </div>
                 <div class="language">
-                    <a href="../login form/loginar.html">EN</a>
-                    <a href="../login form/loginar.html">ع</a>
+                    <a href="../Doctor/patient-profile.html">EN</a>
+                    <a href="../Doctor Arabic/patient-profile.html">ع</a>
                 </div>
 
             </div>
@@ -355,7 +344,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="chat-doctor.html" target="_blank">
+                                            <a href="chat-doctor.html">
                                                 <i class="fas fa-comments"></i>
                                                 <span>Messages</span>
                                                 <small class="unread-msg">23</small>
@@ -374,7 +363,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="../login form/loginfr.html">
+                                            <a href="../login form/docloginfr.html">
                                                 <i class="fas fa-sign-out-alt"></i>
                                                 <span>Déconnexion</span>
                                             </a>
