--- a/dashboards/Doctor/appointments.html
+++ b/dashboards/Doctor/appointments.html
@@ -46,20 +46,9 @@
                         <div class="image-container">
                             <img src="../assets/img/logo/SVG/slimArtboard 6.svg" alt="Slim Together">
                         </div>
-
-
-
-
-
-
-
-
                     </ol>
-
                 </div>
-
             </div>
-
             <div class="navbar_right">
                 <div class="notifications">
                     <div class="icon_wrap"><i class="fas fa-bell"></i></div>
@@ -156,11 +145,9 @@
 
                 </div>
                 <div class="language">
-                    <a href="../login form/loginfr.html">fr</a>
-                    <a href="../login form/loginar.html">ع</a>
-
+                    <a href="../Doctor French/appointments.html">fr</a>
+                    <a href="../Doctor Arabic/appointments.html">ع</a>
                 </div>
-
             </div>
         </div>
 
@@ -182,7 +169,7 @@
                                         <img src="../assets/img/doctors/doctor-thumb-02.jpg" alt="User Image">
                                     </a>
                                     <div class="profile-det-info">
-                                        <h3>Dr._________</h3>
+                                        <h3>Dr. Chorfi Khaoula</h3>
 
                                         <div class="patient-details">
                                             <h5 class="mb-0">registered dietitian</h5>
@@ -231,7 +218,7 @@
                                         </li>
 
                                         <li>
-                                            <a href="chat-doctor.html" target="_blank">
+                                            <a href="chat-doctor.html">
                                                 <i class="fas fa-comments"></i>
                                                 <span>Message</span>
                                                 <small class="unread-msg">23</small>
@@ -250,7 +237,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="login form/loginen.html">
+                                            <a href="../login form/docloginen.html">
                                                 <i class="fas fa-sign-out-alt"></i>
                                                 <span>Logout</span>
                                             </a>
