--- a/dashboards/Doctor/doctor-change-password.html
+++ b/dashboards/Doctor/doctor-change-password.html
@@ -45,18 +45,8 @@
                         <div class="image-container">
                             <img src="../assets/img/logo/SVG/slimArtboard 6.svg" alt="Slim Together">
                         </div>
-
-
-
-
-
-
-
-
                     </ol>
-
                 </div>
-
             </div>
 
             <div class="navbar_right">
@@ -155,8 +145,8 @@
 
                 </div>
                 <div class="language">
-                    <a href="../login form/loginfr.html">fr</a>
-                    <a href="../login form/loginar.html">ع</a>
+                    <a href="../Doctor French/doctor-change-password.html">fr</a>
+                    <a href="../Doctor Arabic/doctor-change-password.html">ع</a>
 
                 </div>
 
@@ -180,7 +170,7 @@
                                         <img src="../assets/img/doctors/doctor-thumb-02.jpg" alt="User Image">
                                     </a>
                                     <div class="profile-det-info">
-                                        <h3>Dr.________</h3>
+                                        <h3>Dr. Chorfi Khaoula</h3>
 
                                         <div class="patient-details">
                                             <h5 class="mb-0">registered dietitian</h5>
@@ -229,7 +219,7 @@
                                         </li>
 
                                         <li>
-                                            <a href="chat-doctor.html" target="_blank">
+                                            <a href="chat-doctor.html">
                                                 <i class="fas fa-comments"></i>
                                                 <span>Message</span>
                                                 <small class="unread-msg">23</small>
@@ -248,7 +238,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="../login form/loginen.html">
+                                            <a href="../login form/docloginen.html">
                                                 <i class="fas fa-sign-out-alt"></i>
                                                 <span>Logout</span>
                                             </a>
