--- a/dashboards/Doctor/patient-profile.html
+++ b/dashboards/Doctor/patient-profile.html
@@ -51,20 +51,9 @@
                         <div class="image-container">
                             <img src="../assets/img/logo/SVG/slimArtboard 6.svg" alt="Slim Together">
                         </div>
-
-
-
-
-
-
-
-
                     </ol>
-
                 </div>
-
             </div>
-
             <div class="navbar_right">
                 <div class="notifications">
                     <div class="icon_wrap"><i class="fas fa-bell"></i></div>
@@ -161,8 +150,8 @@
 
                 </div>
                 <div class="language">
-                    <a href="../login form/loginfr.html">fr</a>
-                    <a href="../login form/loginar.html">ع</a>
+                    <a href="../Doctor French/patient-profile.html">fr</a>
+                    <a href="../Doctor Arabic/patient-profile.html">ع</a>
 
                 </div>
 
@@ -188,7 +177,7 @@
                                         <img src="../assets/img/doctors/doctor-thumb-02.jpg" alt="User Image">
                                     </a>
                                     <div class="profile-det-info">
-                                        <h3>Dr._________</h3>
+                                        <h3>Dr. Chorfi Khaoula</h3>
 
                                         <div class="patient-details">
                                             <h5 class="mb-0">registered dietitian</h5>
@@ -237,7 +226,7 @@
                                         </li>
 
                                         <li>
-                                            <a href="chat-doctor.html" target="_blank">
+                                            <a href="chat-doctor.html">
                                                 <i class="fas fa-comments"></i>
                                                 <span>Message</span>
                                                 <small class="unread-msg">23</small>
@@ -256,7 +245,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="../login form/loginen.html">
+                                            <a href="../login form/docloginen.html">
                                                 <i class="fas fa-sign-out-alt"></i>
                                                 <span>Logout</span>
                                             </a>
