--- a/dashboards/Patient Arabic/booking.html
+++ b/dashboards/Patient Arabic/booking.html
@@ -205,7 +205,7 @@
                                         </li>
 
                                         <li>
-                                            <a href="chat.html" target="_blank">
+                                            <a href="chat.html">
                                                 <i class="fas fa-comments"></i>
                                                 <span>رسائل</span>
                                                 <small class="unread-msg">23</small>
@@ -224,7 +224,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="../login form/loginen.html">
+                                            <a href="../login form/docloginar.html">
                                                 <i class="fas fa-sign-out-alt"></i>
                                                 <span>تسجيل الخروج</span>
                                             </a>
@@ -244,7 +244,7 @@
                                         <img src="../assets/img/doctors/doctor-thumb-02.jpg" alt="صورة الطبيب">
                                     </a>
                                     <div class="booking-info">
-                                        <h4><a href="doctor-profile.html">د. ________</a></h4>
+                                        <h4><a href="doctor-profile.html">Dr. شرفي خولة</a></h4>
                                         <div class="rating">
                                             <i class="fas fa-star filled"></i>
                                             <i class="fas fa-star filled"></i>
