--- a/dashboards/Patient French/doctor-profile.html
+++ b/dashboards/Patient French/doctor-profile.html
@@ -48,20 +48,9 @@
                         <div class="image-container">
                             <img src="../assets/img/logo/SVG/slimArtboard 6.svg" alt="Slim Together">
                         </div>
-
-
-
-
-
-
-
-
                     </ol>
-
                 </div>
-
             </div>
-
             <div class="navbar_right">
                 <div class="notifications">
                     <div class="icon_wrap"><i class="fas fa-bell"></i></div>
@@ -203,7 +192,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="chat.html" target="_blank">
+                                            <a href="chat.html">
                                                 <i class="fas fa-comments"></i>
                                                 <span>Message</span>
                                                 <small class="unread-msg">23</small>
@@ -222,7 +211,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="../login form/loginen.html">
+                                            <a href="../login form/docloginfr.html">
                                                 <i class="fas fa-sign-out-alt"></i>
                                                 <span>Déconnexion</span>
                                             </a>
@@ -245,7 +234,7 @@
                                                 alt="User Image">
                                         </div>
                                         <div class="doc-info-cont">
-                                            <h4 class="doc-name">Dr. Chorfi Khawla</h4>
+                                            <h4 class="doc-name">Dr. Chorfi Khaoula</h4>
                                             <p class="doc-speciality">diététicienne enregistrée</p>
 
                                             <div class="rating">
