--- a/dashboards/Patient/booking.html
+++ b/dashboards/Patient/booking.html
@@ -46,20 +46,9 @@
                         <div class="image-container">
                             <img src="../assets/img/logo/SVG/slimArtboard 6.svg" alt="Slim Together">
                         </div>
-
-
-
-
-
-
-
-
                     </ol>
-
                 </div>
-
             </div>
-
             <div class="navbar_right">
                 <div class="notifications">
                     <div class="icon_wrap"><i class="fas fa-bell"></i></div>
@@ -205,7 +194,7 @@
                                         </li>
 
                                         <li>
-                                            <a href="chat.html" target="_blank">
+                                            <a href="chat.html">
                                                 <i class="fas fa-comments"></i>
                                                 <span>Message</span>
                                                 <small class="unread-msg">23</small>
@@ -224,7 +213,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="../login form/loginen.html">
+                                            <a href="../login form/docloginen.html">
                                                 <i class="fas fa-sign-out-alt"></i>
                                                 <span>Logout</span>
                                             </a>
@@ -244,7 +233,7 @@
                                         <img src="../assets/img/doctors/doctor-thumb-02.jpg" alt="User Image">
                                     </a>
                                     <div class="booking-info">
-                                        <h4><a href="doctor-profile.html">Dr.________</a></h4>
+                                        <h4><a href="doctor-profile.html">Dr. Chorfi Khaoula</a></h4>
                                         <div class="rating">
                                             <i class="fas fa-star filled"></i>
                                             <i class="fas fa-star filled"></i>
