--- a/dashboards/Patient/chat.html
+++ b/dashboards/Patient/chat.html
@@ -47,6 +47,9 @@
                             <!-- Chat Left -->
                             <div class="chat-cont-left">
                                 <div class="chat-header">
+                                    <a href="patient-dashboard.html" class="back-user-list" style="color: aliceblue;">
+                                        <i class="material-icons">chevron_left</i>
+                                    </a>
                                     <span>Chats</span>
                                     <a href="javascript:void(0)" class="chat-compose">
                                         <i class="material-icons">control_point</i>
@@ -71,7 +74,7 @@
                                             </div>
                                             <div class="media-body">
                                                 <div>
-                                                    <div class="user-name">Dr...</div>
+                                                    <div class="user-name">Dr. Chorfi Khaoula</div>
                                                     <div class="user-last-chat">hello
                                                     </div>
                                                 </div>
@@ -99,18 +102,11 @@
                                             </div>
                                         </div>
                                         <div class="media-body">
-                                            <div class="user-name">Dr...</div>
+                                            <div class="user-name">Dr. Chorfi Khaoula</div>
                                             <div class="user-status">online</div>
                                         </div>
                                     </div>
-                                    <div class="chat-options">
-                                        <a href="javascript:void(0)" data-toggle="modal" data-target="#voice_call">
-                                            <i class="material-icons">local_phone</i>
-                                        </a>
-                                        <a href="javascript:void(0)">
-                                            <i class="material-icons">more_vert</i>
-                                        </a>
-                                    </div>
+
                                 </div>
                                 <div class="chat-body">
                                     <div class="chat-scroll">
