--- a/dashboards/Patient/doctor-profile.html
+++ b/dashboards/Patient/doctor-profile.html
@@ -48,20 +48,9 @@
                         <div class="image-container">
                             <img src="../assets/img/logo/SVG/slimArtboard 6.svg" alt="Slim Together">
                         </div>
-
-
-
-
-
-
-
-
                     </ol>
-
                 </div>
-
             </div>
-
             <div class="navbar_right">
                 <div class="notifications">
                     <div class="icon_wrap"><i class="fas fa-bell"></i></div>
@@ -193,7 +182,7 @@
                                         </li>
                                         <li>
                                             <a href="booking.html">
-                                                <i class="fas fa-calendar-check "></i>
+                                                <i class="fas fa-calendar-check"></i>
                                                 <span>Booking appointement</span>
                                             </a>
                                         </li>
@@ -207,7 +196,7 @@
                                         </li>
 
                                         <li>
-                                            <a href="chat.html" target="_blank">
+                                            <a href="chat.html">
                                                 <i class="fas fa-comments"></i>
                                                 <span>Message</span>
                                                 <small class="unread-msg">23</small>
@@ -226,7 +215,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="../login form/loginen.html">
+                                            <a href="../login form/docloginen.html">
                                                 <i class="fas fa-sign-out-alt"></i>
                                                 <span>Logout</span>
                                             </a>
@@ -248,7 +237,7 @@
                                             <img src="../assets/img/doctors/doctor-thumb-02.jpg" class="img-fluid" alt="User Image">
                                         </div>
                                         <div class="doc-info-cont">
-                                            <h4 class="doc-name">Dr.________</h4>
+                                            <h4 class="doc-name">Dr. Chorfi Khaoula</h4>
                                             <p class="doc-speciality">registered dietitian</p>
 
                                             <div class="rating">
