--- a/dashboards/Patient/patient-dashboard.html
+++ b/dashboards/Patient/patient-dashboard.html
@@ -45,20 +45,9 @@
                         <div class="image-container">
                             <img src="../assets/img/logo/SVG/slimArtboard 6.svg" alt="Slim Together">
                         </div>
-
-
-
-
-
-
-
-
                     </ol>
-
                 </div>
-
             </div>
-
             <div class="navbar_right">
                 <div class="notifications">
                     <div class="icon_wrap"><i class="fas fa-bell"></i></div>
@@ -142,9 +131,7 @@
                 <div class="language">
                     <a href="../Patient French/patient-dashboard.html">fr</a>
                     <a href="../Patient Arabic/patient-dashboard.html">ع</a>
-
                 </div>
-
             </div>
         </div>
 
@@ -204,7 +191,7 @@
                                         </li>
 
                                         <li>
-                                            <a href="chat.html" target="_blank">
+                                            <a href="chat.html">
                                                 <i class="fas fa-comments"></i>
                                                 <span>Message</span>
                                                 <small class="unread-msg">23</small>
@@ -223,7 +210,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="../login form/loginen.html">
+                                            <a href="../login form/docloginen.html">
                                                 <i class="fas fa-sign-out-alt"></i>
                                                 <span>Logout</span>
                                             </a>
