--- a/dashboards/login form/docloginfr.html
+++ b/dashboards/login form/docloginfr.html
@@ -55,12 +55,12 @@
                 <div class="overlay-panel overlay-left">
                     <h1>Bonjour, Docteur !</h1>
                     <p>Veuillez vous connecter avec vos informations personnelles</p>
-                    <button class="ghost" id="signIn">Je suis un patient</button>
+                    <button class="ghost" id="signIn">Je suis un PATIENT</button>
                 </div>
                 <div class="overlay-panel overlay-right">
                     <h1>Bonjour !</h1>
                     <p>Veuillez vous connecter avec vos informations personnelles et commencez votre parcours de santé avec nous</p>
-                    <button class="ghost" id="signUp">Je suis le DOCTEUR!!</button>
+                    <button class="ghost" id="signUp">Je suis le DOCTEUR</button>
                 </div>
             </div>
         </div>
