--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
     </div>
     <!-- End Testimonials -->
     <!-- Start Stats -->
-    <div class="stats" id="stats">
+    <!-- <div class="stats" id="stats">
         <h2>Our Awesome Stats</h2>
         <div class="container">
             <div class="box">
@@ -359,7 +359,7 @@
                 <span class="text">Money</span>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- End Stats -->
     <!-- Start Pricing -->
 
